<resources>
    <string name="app_name">OkeGas Food</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_tab_profile">Profile</string>
    <string name="title_tab_cart">Cart</string>
    <string name="title_tab_home">Home</string>
    <string name="desc_banner">Pesan makanan lewat aplikasi dan dapatkan diskonmu</string>
    <string name="title_banner">Diskon 30%</string>
    <string name="text_header">Hai, %1$s</string>
    <string name="desc_header">Mau makan apa hari ini?</string>
    <string name="text_header_menu">List Menu Makanan</string>
    <string name="profile_username">Username</string>
    <string name="profile_password">Password</string>
    <string name="profile_email">Email</string>
    <string name="profile_no_telepon">No. Telepon</string>
    <string name="header_profile">Profile</string>
    <string name="button_add_to_cart">Tambahkan ke Keranjang - %s</string>
    <string name="sum">1</string>
    <string name="location">Lokasi</string>
    <string name="text_hint_notes">Notes</string>
    <string name="notes_cart">Catatan :</string>
    <string name="text_header_your_cart">Keranjang</string>
    <string name="button_checkout_cart">Pesan</string>
    <string name="total_quantity">%s x</string>
    <string name="total_quantity_checkout">x %s</string>
    <string name="text_cart_is_empty">Keranjang Kosong</string>
    <string name="text_section_checkout">Total Harga</string>
    <string name="text_title_order_confirmation">Konfirmasi Pesanan</string>
    <string name="text_order_type">Select order type</string>
    <string name="text_pick_up">Pickup</string>
    <string name="text_delivery">Delivery</string>
    <string name="text_payment_method">Payment Method</string>
    <string name="text_cash">Cash</string>
    <string name="text_okepay">OkePay</string>
    <string name="payment_summary">Payment summary</string>
    <string name="btn_custom_dialog">Oke</string>
    <string name="title_custom_dialog">Order Success!</string>
    <string name="desc_custom_dialog">Your order has been placed successfully.</string>
    <string name="text_no_data">No data</string>
    <string name="hint_name">Name</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_confirm_password">Confirm Password</string>
    <string name="text_register">Register</string>
    <string name="text_already_have_an_account_click_here">Already have an Account ? Login Here</string>
    <string name="text_log_in">Log in</string>
    <string name="text_not_registered_yet_register_here">Not registered yet ? Register Here</string>
    <string name="text_error_email_empty">Email should not be empty</string>
    <string name="text_error_email_invalid">Enter a valid format email</string>
    <string name="text_error_password_empty">Password should not be empty</string>
    <string name="text_error_password_less_than_8_char">Password cannot less than 8 character</string>
    <string name="text_password_does_not_match">Password doesn\'t match</string>
    <string name="text_error_name_cannot_empty">Name cannot be empty</string>
    <string name="text_highlight_login_here">Login Here</string>
    <string name="text_highlight_register">Register Here</string>
    <string name="text_logout">Logout</string>
    <string name="text_loading">Loading</string>
    <string name="error_checkout">Error checkout</string>
    <string name="text_change_profile">Change Profile</string>
    <string name="text_change_profile_success">Change Profile data Success !</string>
    <string name="text_change_profile_failed">Change Profile data Failed !</string>
    <string name="text_want_to_logout">Do you want to logout ?</string>
    <string name="text_add_menu_to_cart_succes">Add Menu to cart succes</string>
    <string name="text_add_menu_to_cart_failed">Add Menu to cart failed</string>
    <string name="text_login_failed">Login Failed : %1$s</string>
    <string name="text_header_home_hai">Hai!</string>
</resources>